<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:caligfy="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    caligfy:ignore="MissingPrefix"
    tools:context="au.com.realestate.hometime.MainActivity"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="?actionBarSize">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonPanel"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainactivity_north" />

                    <TextView
                        android:id="@+id/txt_nodata_north"
                        style="@style/MyTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mainactivity_no_data" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/northRecyclerView"
                        style="@style/Widget.AppCompat.ListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="true" />

                    <TextView
                        style="@style/MyTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainactivity_south" />

                    <TextView
                        android:id="@+id/txt_nodata_south"
                        style="@style/MyTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mainactivity_no_data" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/southRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="true" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButton"
                    style="@style/MyButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_5"
                    android:layout_weight="1"
                    android:onClick="clearClick"
                    android:text="@string/mainactivity_clear" />

                <Button
                    android:id="@+id/refreshButton"
                    style="@style/MyButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_weight="1"
                    android:onClick="refreshClick"
                    android:text="@string/mainactivity_refresh" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>
